--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pit",
+  "name": "corewar-pit-service",
   "version": "0.0.1",
-  "description": "The Pit",
+  "description": "The coreware pit service",
   "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
