--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "The coreware pit service",
   "main": "app/corewar_pit_service.js",
   "scripts": {
-    "serve": "forever start -p logs/ -l forever.log -a -o logs/out.log -e logs/err.log app/corewar_pit_service.js",
+    "clean": "rm -fr logs",
+    "dist-clean": "npm run clean node_modules",
+    "start": "mkdir -p logs && forever start -p logs/ -l forever.log -a -o logs/out.log -e logs/err.log app/corewar_pit_service.js",
+    "stop": "forever stop app/corewar_pit_service.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Simon Relet",
@@ -12,7 +15,7 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
-    "fs-promise": "^0.3.1",
+    "fs-promise": "^0.5.0",
     "mkdirp": "^0.5.1"
   }
 }
