--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "clean": "rm -fr logs",
     "dist-clean": "npm run clean node_modules",
-    "start": "mkdir -p logs && forever start -p logs/ -l forever.log -a -o logs/out.log -e logs/err.log app/corewar_pit_service.js",
-    "stop": "forever stop app/corewar_pit_service.js",
+    "start": "mkdir -p logs && forever start --uid pit -p logs/ -l forever.log -a -o logs/out.log -e logs/err.log app/corewar_pit_service.js",
+    "stop": "forever stop pit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Simon Relet",
